fix: remove scrollbar from html element

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,15 @@
 	body {
 		overflow-x: hidden;
 	}
+
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
 }
 
 @utility flex-center {
